[tool.poetry]
name = "web-basics"
version = "0.1.0"
description = ""
authors = ["Dima <fialkofskiy@gmail.com>"]
readme = "README.md"
packages = [{include = "web_basics"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
